# fashion-garment-classification-inspiration-web-app

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  playwright.config.ts
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: annotations.py  classify.py  images.py  search.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai_metadata.py  annotation.py  embedding_reference.py  image.py
backend/app/repositories/: __init__.py  embeddings.py  images.py  metadata.py
backend/app/schemas/: annotation.py  classification.py  image.py  search.py
backend/app/services/: annotations.py  classification.py  embeddings.py  image_upload.py  openai_vision.py  search.py  semantic_index.py
backend/app/storage/: local.py
backend/app/vector/: __init__.py  faiss_index.py
backend/app/workers/: classification_tasks.py  classification_worker.py
backend/fashion_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: README
backend/tests/: conftest.py
backend/tests/e2e/: test_upload_classify_filter.py
backend/tests/integration/: test_search_filters.py  test_semantic_retrieval.py  test_upload_flow.py
backend/tests/unit/: test_json_parsing.py
docs/: architecture.md  deployment.md  project_interview_guide.md  requirements_audit.md  setup_usage_testing.md  technical_documentation.md
eval/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  (+1 more)
(+26 files in other folders)
